Use Map.of() for storage adapters
We have a singleton map with non-null key and value: use Map.of()
instead.

Change-Id: I9dd445e7bb43927790928e130a8f50f5561672dc
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>